--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,36 +5,38 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Main2Activity">
+        tools:context=".Main2Activity" tools:layout_editor_absoluteY="81dp">
 
     <TextView
             android:background="@drawable/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="3dp"
-            android:layout_marginLeft="21dp" android:layout_marginStart="21dp" android:layout_marginBottom="62dp"
-            app:layout_constraintBottom_toTopOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
+            android:id="@+id/textView"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/emailEditText" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.0"/>
 
 
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/emailEditText"
             android:gravity="center"
             android:textColorHint="#004187"
             android:background="@drawable/edttxt"
             android:hint="Enter your email"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="13dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/editText2"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginRight="10dp"/>
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/editText2" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+    />
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="360dp"
+            android:layout_height="42dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editText2"
@@ -42,20 +44,25 @@
             android:background="@drawable/edttxt"
             android:textColorHint="#004187"
             android:hint="password"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginBottom="44dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp" android:layout_marginEnd="12dp" android:layout_marginRight="12dp"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.675"/>
     <Button
-            android:text="Button"
-            android:layout_width="99dp"
-            android:layout_height="0dp"
+            android:text="Login"
+            android:layout_width="107dp"
+            android:layout_height="35dp"
             android:id="@+id/button"
             android:background="@drawable/btn2"
-            android:textColor="#004187" app:layout_constraintTop_toBottomOf="@+id/editText2"
-            android:layout_marginBottom="61dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="secondbtn"/>
+            android:textColor="#004187"
+            android:onClick="secondbtn"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textStyle="bold"/>
 
 
 </android.support.constraint.ConstraintLayout>
